# shrek

./: CMakeLists.txt  README.md  README.tex  Untitled1.save  command.cpp  command.cpp.save  command.h  command.h.save  command_old.cpp  command_old.h  configure.h  decomposition.bk.h  decomposition.cpp  decomposition.cpp.save  decomposition.h  decomposition.h.save  decomposition.hk.cpp  decomposition_old.h  decompositionthread.cpp  decompositionthread.h  development.aux  development.blg  development.out  development.tex  development.toc  genotype.cpp  genotype.cpp.save  genotype.h  genotype.h.save  genotypefilehandler.bk.cpp  genotypefilehandler.bk.h  genotypefilehandler.cpp  genotypefilehandler.cpp.save  genotypefilehandler.cpp.save-failed  genotypefilehandler.h  genotypefilehandler.h.save  genotypefilehandler_old.cpp  genotypefilehandler_old.h  interval.cpp  interval.h  (+51 more)
doxygen/: doxyfile
doxygen/html/: annotated.html  annotated.js  class_account.html  class_command-members.html  class_command.html  class_command.js  class_decomposition-members.html  class_decomposition.html  class_decomposition.js  class_decomposition_thread-members.html  class_decomposition_thread.html  class_decomposition_thread.js  class_genotype-members.html  class_genotype.html  class_genotype.js  class_genotype_file_handler-members.html  class_genotype_file_handler.html  class_genotype_file_handler.js  class_linkage-members.html  class_linkage.html  class_linkage.js  class_linkage_thread-members.html  class_linkage_thread.html  class_linkage_thread.js  class_region-members.html  class_region.html  class_region.js  class_snp-members.html  class_snp.html  class_snp.js  class_snp_estimation-members.html  class_snp_estimation.html  class_snp_estimation.js  class_snp_index-members.html  class_snp_index.html  class_snp_index.js  classes.html  classuseful_tools-members.html  classuseful_tools.html  command_8cpp.html  (+59 more)
doxygen/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+13 more)
inc/: decomposition.h  linkage.h  region.h  snp.h  snpestimation.h  usefulTools.h
src/: command.cpp  decomposition.cpp  genotype.cpp  genotypefilehandler.cpp.save  linkage.cpp  linkage.cpp.save  main.cpp  region.cpp  usefulTools.cpp
